[package]
authors = ["LongYinan <longyinan.brooklyn@bytedance.com>"]
edition = "2018"
name = "lh-sidecar"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
bytes = "1.0"
futures = "0.3"
http = "0.2"
httparse = "1.0"
hyper = {version = "0.14", features = ["tcp", "http1", "http2", "server", "stream"]}
hyper-rustls = "0.22"
rustls = "0.19"
time = "0.2"
tokio = {version = "1", features = [
  "fs",
  "macros",
  "io-std",
  "io-util",
  "rt",
  "rt-multi-thread", # so examples can use #[tokio::main]
  "sync",
  "time",
  "test-util",
]}
tokio-rustls = "0.22"
tokio-util = {version = "0.6.3", features = ["full"]}
